--- a/src/App.css
+++ b/src/App.css
@@ -51,15 +51,9 @@ main {
   color: #fff;
 }
 
-@media (max-width: 640px) {
-  .header {
-    padding: 8px 16px;
-  }
-
-  main {
-    flex-direction: column;
-    gap: 0px;
-    padding: 0px 16px;
+@media (max-width: 425px) {
+  .header-title {
+    font-size: 24px;
   }
 }
 
