--- a/src/styles/Aside.css
+++ b/src/styles/Aside.css
@@ -6,6 +6,13 @@
 }
 
 .card-filter {
+  width: max-content;
   padding: 16px 24px;
   border-radius: 16px;
+}
+
+@media (max-width: 768px) {
+  .card-filter {
+    width: 100%;
+  }
 }
