--- a/src/styles/Aside.css
+++ b/src/styles/Aside.css
@@ -7,8 +7,13 @@
 
 .card-filter {
   width: max-content;
-  padding: 16px 24px;
+  padding: 16px;
   border-radius: 16px;
+  appearance: none;
+  background-image: url('../assets/chevron-down.svg');
+  background-repeat: no-repeat;
+  background-position: center right 16px;
+  background-size: 24px 24px;
 }
 
 @media (max-width: 768px) {
