--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,12 @@
   --main-text-color: #333;
 } 
 
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 body {
   font-family: "DM Sans", system-ui;
 }
@@ -42,6 +48,7 @@ main {
   display: flex;
   gap: 32px;
   padding: 0px 160px;
+  flex: 1;
 }
 
 .footer {
