--- a/src/styles/ItemList.css
+++ b/src/styles/ItemList.css
@@ -5,3 +5,23 @@
   gap: 16px;
   padding: 16px 0px;
 }
+
+.error-message-container {
+  width: 100%;
+  padding: 64px;
+  display: flex;
+  justify-content: center;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.loader {
+  animation: rotate 5s linear infinite;
+}
